# MT5AI

./: .env.example  .gitignore  README.md  config.py  debug_ai_portfolio_output.txt  main.py  pyproject.toml  render.yaml  requirements.txt  skills-lock.json  verify_deploy.py
backups/: invest_advisor_backup_20260326T174804Z.json  invest_advisor_backup_20260327T093113Z.json  invest_advisor_backup_20260327T110849Z.json  invest_advisor_backup_20260327T111301Z.json  invest_advisor_backup_20260327T113650Z.json  invest_advisor_backup_20260327T114111Z.json  invest_advisor_backup_20260327T114744Z.json  invest_advisor_backup_20260327T115742Z.json  invest_advisor_backup_20260327T120008Z.json
data/: alert_state_smoke.json  news_calendar_cache.json  spread_profiles.json  walk_forward_BTCUSD_20260301.json  walk_forward_ETHUSD_20260301.json  walk_forward_GOLD_20260301.json  walk_forward_GOLD_20260302.json
data/analytics/: analytics.duckdb
data/analytics/jsonl/: recommendation_events.jsonl  runtime_snapshots.jsonl
data/analytics/parquet/: market_events.parquet  recommendation_events.parquet  runtime_snapshots.parquet
data/qdrant/: thesis_memory.jsonl
logs/: invest_advisor_bot.jsonl
models/BTCUSD/: optuna_profile.bak.json  optuna_profile.json  torch_sequence_model_long.pt  torch_sequence_model_short.pt  xgb_signal_model_long.joblib  xgb_signal_model_short.joblib
models/ETHUSD/: optuna_profile.bak.json  optuna_profile.json  torch_sequence_model_long.pt  torch_sequence_model_short.pt  xgb_signal_model_long.joblib  xgb_signal_model_short.joblib
models/GOLD/: lgbm_signal_model_long.joblib  lgbm_signal_model_short.joblib  optuna_profile.bak.json  optuna_profile.json  torch_sequence_model_long.pt  torch_sequence_model_short.pt  torch_transformer_model_long.pt  torch_transformer_model_short.pt  xgb_signal_model_long.joblib  xgb_signal_model_short.joblib
modules/: __init__.py  backtest.py  brain_ai.py  db.py  execution.py  feature_engineering.py  logging_setup.py  model_pipeline.py  mt5_bridge.py  news_filter.py  notifications.py  risk_control.py  runtime_lock.py  service.py  signals.py  spread_profile.py  timeframes.py  training_utils.py  types.py  walk_forward.py
mt5ai_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: system_investment_advisor.txt
scripts/: install-logon-task.ps1  install-startup-autostart.ps1  remove-logon-task.ps1  remove-startup-autostart.ps1  run-live-demo.ps1  test_macro.py
src/invest_advisor_bot/: __init__.py  analytics_store.py  analytics_warehouse.py  backtesting.py  backup_restore.py  braintrust_observer.py  config.py  data_quality.py  dbt_semantic_layer.py  event_bus.py  event_bus_worker.py  evidently_observer.py  feature_store.py  hot_path_cache.py  human_review_store.py  langfuse_observer.py  main.py  mlflow_observer.py  observability.py  runtime_diagnostics.py  runtime_status.py  semantic_analyst.py  thesis_vector_store.py  universe.py
src/invest_advisor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/invest_advisor_bot/analysis/: __init__.py  asset_ranking.py  confidence_scoring.py  macro_regime.py  news_impact.py  portfolio_allocation.py  portfolio_profile.py  risk_score.py  stock_screener.py  technical_indicators.py  trend_engine.py
src/invest_advisor_bot/bot/: __init__.py  ai_simulated_portfolio_state.py  alert_state.py  backup_manager.py  handlers.py  jobs.py  (+8 more)
tests/: test_ai_simulated_portfolio.py  test_backtest.py  test_config.py  test_config_overrides.py  test_data_quality_and_observers.py  test_db.py  test_execution.py  test_feature_engineering.py  test_handlers.py  test_health_check.py  test_llm_client.py  test_main.py  test_market_data_client.py  test_mlflow_observer.py  test_monitoring_engines.py  test_mt5_bridge.py  test_news_client.py  test_news_filter.py  test_notifications.py  test_portfolio_profile.py  test_portfolio_state.py  test_production_expansion.py  test_recommendation_service.py  test_research_client.py  test_risk_control.py  test_runtime_diagnostics.py  test_runtime_history_store.py  test_runtime_integration.py  test_runtime_lock.py  test_sec_orderflow_langfuse.py  test_service.py  test_signal_engine.py  test_spread_profile.py  test_stock_screener.py  test_technical_indicators.py  test_trend_engine.py  test_user_state.py  test_walk_forward.py
(+16 files in other folders)
