[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-advisor-bot"
version = "0.1.0"
description = "Telegram AI chatbot for investment guidance using market data, macro news, and technical trend analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "cachetools>=5.5.2",
  "httpx>=0.27.2",
  "loguru>=0.7.2",
  "numpy>=1.26.4",
  "pandas>=2.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-telegram-bot[job-queue]>=20.7",
  "python-dotenv>=1.0.1",
  "yfinance>=0.2.54",
  "pandas-datareader>=0.10.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.8.6",
]

[project.scripts]
invest-advisor-bot = "invest_advisor_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
